2002-04-19  Mark McLoughlin  <mark@skynet.ie>

	* gconf-property-editor.[ch]: (peditor_integer_value_changed),
	(peditor_integer_widget_changed), (gconf_peditor_new_integer_valist),
	(gconf_peditor_new_integer): implement GtkEntry based integer
	peditor.

2002-04-21  Rachel Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.c
	(gconf_peditor_new_select_menu_with_enum,
	 gconf_peditor_new_enum_toggle,
	 gconf_peditor_new_select_radio_with_enum): Add in an explicit
	 'use_nick' parameter. Implicit guessing can break badly if
	 the gconf data gets corrupted.
	(peditor_enum_int_from_string): Change use_nick to copy-by-value,
	do not try to guess it.
	(peditor_enum_conv_to_widget, guard_get_bool,
	 peditor_enum_toggle_conv_to_widget): Do not pass in use_nick
	 as a reference.

Thu Apr 18 17:56:25 2002  Jonathan Blandford  <jrb@redhat.com>

	* theme-common.c: Notify when the theme changes.

2002-04-18  Jody Goldberg <jody@gnome.org>

	* activate-settings-daemon.c (static) : message dialogs must have
	  separators.

2002-04-10  Rachel Hestilow  <hestilow@ximian.com>
	
	* gconf-proprerty-editor.h: Add FontType enum, and a font_type
	parameter to gconf_peditor_new_font.

	* gconf-property-editor.c:
	(peditor_font_value_changed): Call peditor_font_merge_setting
	instead of setting the properties explicitly.
	(peditor_font_widget_changed): Switch on font_type to determine
	what to set for a GConfValue.

2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.c (peditor_image_clicked_cb): Set
	fsel to modal, it seems to fix a weird grabbing bug.

2003-03-26  Kjartan Maraas  <kmaraas@gnome.org>

	* activate-settings-daemon.c: Fix a string.
	
2002-03-25  Lauris Kaplinski  <lauris@ximian.com>

	* gconf-property-editor.c (gconf_peditor_widget_set_guard): Test for NULL
	gconf value

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am: Include libbackground (used for preview-file-selector).