@@ -1,3 +1,9 @@
+2002-04-29  Rachel Hestilow  <hestilow@ximian.com>
+
+	* file-transfer-dialog.[ch]: Added.
+	
+	* Makefile.am: Compile file-transfer-dialog.[ch].
+
 2002-04-19  Mark McLoughlin  <mark@skynet.ie>
 
 	* gconf-property-editor.[ch]: (peditor_integer_value_changed),
